--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta content="width=device-width,initial-scale=1" name="viewport">
-    <title>AlwaysFaxz</title>
+    <title>JerzzOffc</title>
     <meta content="JerzzOffc Menyediakan Kebutuhan Digital" name="description">
     <meta content="Bot WhatsApp, Layanan Digital, dan VPS" name="keywords">
     <link href="https://img99.pixhost.to/images/734/514803818_save_20240919_230604.jpg" rel="icon">
