--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta content="width=device-width,initial-scale=1" name="viewport">
-    <title>AlwaysFaxz</title>
+    <title>Web-JerzzOffc</title>
     <meta content="JerzzOffc Menyediakan Kebutuhan Digital" name="description">
     <meta content="Bot WhatsApp, Layanan Digital, dan VPS" name="keywords">
-    <link href="https://img99.pixhost.to/images/734/514803818_save_20240919_230604.jpg" rel="icon">
-    <link href="https://img99.pixhost.to/images/734/514803818_save_20240919_230604.jpg" rel="apple-touch-icon">
+    <link href="https://img0.pixhost.to/images/180/521192058_xyro.jpg" rel="icon">
+    <link href="https://img0.pixhost.to/images/180/521192058_xyro.jpg" rel="apple-touch-icon">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Montserrat:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
     <link href="https://api.zeeoneofc.my.id/aos/aos.css" rel="stylesheet">
     <link href="https://api.zeeoneofc.my.id/bootstrap/css/bootstrap.min.css" rel="stylesheet">
